workspace(name = "py_grpc_library_grpc")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")

maybe(
    http_archive,
    name = "com_github_grpc_grpc",
    urls = ["https://github.com/grpc/grpc/archive/refs/tags/v1.70.1.tar.gz"],
    strip_prefix = "grpc-1.70.1",
    sha256 = "c4e85806a3a23fd2a78a9f8505771ff60b2beef38305167d50f5e8151728e426",
)

# maybe(
#     http_archive,
#     name = "com_github_grpc_grpc",
#     urls = ["https://github.com/grpc/grpc/archive/refs/tags/v1.57.1.tar.gz"],
#     strip_prefix = "grpc-1.57.1",
#     sha256 = "0762f809b9de845e6a7c809cabccad6aa4143479fd43b396611fe5a086c0aeeb"
# )

load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")

grpc_deps()

load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")

grpc_extra_deps()